try fix  horizontal scroll bar floats in the middle of the page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,6 @@ body {
   font-family: Manrope, sans-serif;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
   background-color: $color-dark;
 
   &.menu-open {
